Feature 79 create sale in organization (#120)
* implement create sale

* implement return product logic

* implement logic for return resource, getAllSales and getSale

* refactoring

* endpoints refactoring

* unit tests for create sale in organization

* unit tests

* feature-79-integration-tests

* some changes after code review

* code review refactoring